--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap');
     </style>
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
     <div id="root"></div>
